Opened 15 years ago
Closed 15 years ago
#283 closed defect (fixed)
dvd-pal target does not force correct colorspace (with DVCPRO50)
| Reported by: | tbart | Owned by: | Michael Niedermayer |
|---|---|---|---|
| Priority: | normal | Component: | ffmpeg |
| Version: | git-master | Keywords: | colorspace subsampling dvd 4:2:0 yuv420p 4:2:2 yuv422p dvcpro50 |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | yes |
Description
When encoding DVCPRO50 material (or most likely any material having non-dvd-conformant chroma subsampling) to a dvd as in
ffmpeg -i dvcpro50_sample.avi -target pal-dvd -b $vbrate -minrate $vbrate -maxrate $vbrate -acodec ac3 -ab $abrate -flags ilme+ildct -threads 2 dvcpro50_sample.vob
the resulting vob has a yuv422p colorspace.
Authoring with dvdauthor and playing the file on a standalone player results in a colorful puzzle instead of the correct picture.
No errors whatsoever in the authoring process or when viewed with mplayer, vlc, etc..
I guess
-pix_fmt yuv420p
should be forced with the meta parameter -target <whatever>-dvd
Change History (1)
comment:1 by , 15 years ago
| Resolution: | → fixed |
|---|---|
| Status: | new → closed |
| Version: | git → git-master |



Fixed by Michael.