ffmpeg: Force 420 with target dvd and svcd.

Fixes ticket283

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>